Content overview and summary of work to be done.

--- a/app/views/application/login.html.haml
+++ b/app/views/application/login.html.haml
@@ -6,3 +6,5 @@
     %input{:id => "password", :name => "password", :type => "password", :placeholder => "Password"}
     %br
     %input{:id => "loginBtn", :name => "loginBtn", :type => "submit", :value => "Login"}
+%p
+  Need some jQuery Validate on these fields. 
