--- a/app/assets/stylesheets/_tables.scss
+++ b/app/assets/stylesheets/_tables.scss
@@ -3,10 +3,15 @@ table {
 	margin: 0;
 	text-align: left;
 	vertical-align: middle;
-	td {
-		margin: 0 0 10px 0;
-		&:last-child {
-			margin: 0;
+	tr {
+		td,th {
+			padding: 0 20px 5px 0;
+			&:last-child {
+				margin: 0 0 5px 0;
+			}
+		}
+		td {
+			font-size: 13px;
 		}
 	}
 }
