--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,5 +1,7 @@
 %p
-  Index page.
+  Index page. The site needs a menu!
+%p
+  %a{:href => "/campaign"} Campaigns
 %p
   %strong Total users
   = totalUsers
