--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
   %head
     %title MailByte
     = stylesheet_link_tag    "style"
-    = javascript_include_tag "application" 
+    = javascript_include_tag "jquery.min", "application" 
     = csrf_meta_tags
   %body
     #wrapper
