--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,3 +1,17 @@
 input {
 	padding: 10px;
 }
+
+.gb {
+	padding: 5px;
+	@include gradient(#FFFFFF, #cccccc);
+	@include border-radius(5px);
+	border: 1px solid #777;
+	color: #555;
+	text-decoration: none;
+	font-size: 12px;
+	font-weight: normal;
+	&:hover {
+		@include gradient(#FFF,#C0C0C0);
+	}
+}
