--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,13 +9,6 @@
       #header
         %h2 MailByte
         %p.user 
-          - if loggedIn
-            Hello
-            = session[:user][:name]+"."
-            = link_to "Logout", "/logout"
-            | Balance: 
-            = session[:user][:balance]
-          - else
-            = link_to "Login", "/login"
+          =menu
       #main
         = yield
