--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,7 @@
           =menu
       #main
         = yield
+      #footer
+        %a{:href => "/privacy-policy"} Privacy Policy
+        |
+        Copyright &copy 2012 - Luke Smith trading as MailByte
