--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -26,9 +26,51 @@
 	#main {
 		padding: 10px;
 		background: #C0C0C0;
+		overflow: auto;
 		h3 {
 			margin: 0 0 10px 0;
 			padding: 0;
 		}
+		.fields {
+			width: 250px;
+			float: left;
+			h4:first-child {
+				margin: 0;
+			}
+			p {
+				font-size: 12px;
+				text-align: justify;
+			}
+		}
+		.form {
+			width: 600px;
+			margin: 0 0 0 30px;
+			float: left;
+			h4:first-child {
+				margin: 0;
+			}
+			.generated_form {
+				background: #F8F8F8;
+				width: auto;
+				font-size: 14px;
+				padding: 10px;
+				margin: 10px 0 0 0;
+				font-family: "Lucida Console";
+				.plain { display: none; }
+				p {
+					margin: 0;
+					&.t1 { margin: 0 0 0 25px; }
+					&.t2 { margin: 0 0 0 50px; }
+					&.formtitle, &.formforename, &.formsurname, &.formemail { 
+						display: none;
+					}
+				}
+			}
+		}
+	}
+	#footer {
+		font-size: 12px;
+		padding: 10px;
+		text-align: center;
 	}
 }
