File uploads now working.

--- a/app/views/campaign/upload_template.html.haml
+++ b/app/views/campaign/upload_template.html.haml
@@ -1,4 +1,10 @@
 %h2
   Uploaded file information
 %p
-  #{@info.to_s}
+  Original Filename: 
+  #{@info.original_filename}
+%p
+  Content Type: 
+  #{@info.content_type}
+%p
+  #{@notice}
