--- a/app/views/campaign/new_template.html.haml
+++ b/app/views/campaign/new_template.html.haml
@@ -2,7 +2,7 @@
   New Template Form
 %p
   Process (submit to /process) to add / return. Like with the campaign. Upload the template. Store details in Database. Format the name of the file ? encrypt it ? 
-%form{:action => "/campaign/#{params[:id]}/template/upload", :method => "post", :multipart => "true"}
+%form{:action => "/campaign/#{params[:id]}/template/upload", :method => "post", :enctype => "multipart/form-data"}
   %label File
   %input{:type => "file", :name => "templatefile", :id => "templatefile"}
   %input{:type => "submit", :value => "Upload"}
