--- a/app/views/campaign/new_template.html.haml
+++ b/app/views/campaign/new_template.html.haml
@@ -1,8 +1,15 @@
+- if @notice
+  %span.notice{:class => @notice['type']}
+    =@notice['msg']
 %h2
   New Template Form
 %p
   Process (submit to /process) to add / return. Like with the campaign. Upload the template. Store details in Database. Format the name of the file ? encrypt it ? 
 %form{:action => "/campaign/#{params[:id]}/template/upload", :method => "post", :enctype => "multipart/form-data"}
-  %label File
+  %label{:for => "templatename"} Template Name
+  %input{:type => "text", :name => "templatename", :id => "templatename"}
+  %br
+  %label{:for => "templatefile"} Template File
   %input{:type => "file", :name => "templatefile", :id => "templatefile"}
+  %br
   %input{:type => "submit", :value => "Upload"}
